create-license/main/default/objects/Account/fields/Last_Synced_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_By__c</fullName>
    <description>Loop prevention — set to Replicated during inbound sync</description>
    <label>Last Synced By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>