create-license/main/default/objects/Account/fields/Replicated_Channel__c.field-meta.xml
<CustomField>
    <fullName>Replicated_Channel__c</fullName>
    <description>Replicated release channel name</description>
    <label>Replicated Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>