create-license/main/default/objects/Account/fields/Replicated_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Replicated_Customer_Id__c</fullName>
    <description>Links Account to Replicated customer record</description>
    <externalId>true</externalId>
    <label>Replicated Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>