create-license/main/default/objects/Account/fields/Replicated_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Replicated_License_Type__c</fullName>
    <description>Current Replicated license type (trial, paid, community, managed)</description>
    <label>Replicated License Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>